eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
   # Add the below config only when a certificate issuer.yml is created.
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "a8dce759c411546caa3a21e7cbc6f3fd-1715262008.eu-north-1.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
  # Add the below config only when a certificate issuer.yml is created.
  tls:
  - hosts:
    - a8dce759c411546caa3a21e7cbc6f3fd-1715262008.eu-north-1.elb.amazonaws.com
    secretName: simple-bank-api-cert
